# coorporatestressinsights

./: .replit  main.py  pyproject.toml
assets/: style.css
corporate_stress_dashboard/: README.md  dependencies.txt
corporate_stress_dashboard/pages/: 5_Predictive_Insights.py
corporate_stress_dashboard/utils/: visualization.py
pages/: 1_Demographics_Analysis.py  2_Stress_Factors.py  3_Department_Analysis.py  4_Correlation_Analysis.py  5_Predictive_Insights.py  correlations.py  demographics.py  departments.py  predictions.py  stress_factors.py
utils/: data_processing.py  navbar.py  visualization.py
